# lair-postgis

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  instrucoes_conversao.txt  lair-postgis.spec  mkdocs.yml  pyproject.toml  resumo_conversao.md  update_aptidao_notebook.py  update_integracoes_car.py  update_notebook.py
.github/workflows/: build-binaries.yml  deploy-docs.yml
.ia/: task01.md  task02.md  task03.md
docs/: CNAME  cli.md  examples.md  index.md  usage.md
docs/css/: extra.css
docs/js/: custom.js
init-db/: 01-init.sql
integracao-tematica/: diagrama_modelagem_dados.drawio
integracao-tematica/CONSULTAS/: cartograma_uso_cobertura.sql  imovel.sql  tabela_historico_uso_solo.sql  tabela_sintese.sql  tabela_sintese_2008.sql  uso_solo_declividade.sql
integracao-tematica/NOTEBOOKS/: 00_Main.py  01_Download_CAR_estados.ipynb  02_UsosABC.ipynb  02_UsosABC.md  02_UsosABC.py  02_UsosABC_ANTIGO.ipynb  02_UsosABC_ANTIGO.md  03_Declividade.ipynb  03_Declividade.py  04_CorrecaoEdafo.ipynb  05_AptdEdafo.ipynb  (+17 more)
notebooks/: .dockerignore  01_Download_CAR_estados.ipynb  01_Download_CAR_estados.md  02_UsosABC.ipynb  02_UsosABC_ANTIGO.ipynb  03_Declividade.ipynb  04_CorrecaoEdafo.ipynb  05_AptdEdafo.ipynb  05_AptdEdafo.md  06_TerraIndigena.ipynb  06_TerraIndigena.md  07_AmazoniaLegal.ipynb  08_FaixaFronteira.ipynb  09_UCPI.ipynb  09_UCPI.md  10_IntegracoesCAR.ipynb  10_IntegracoesCAR.md  11_AdequarParaBancoDados.ipynb  12_To_PostGis.ipynb  12_To_PostGis.md  Dockerfile  NotebooksCompose.yaml  NotebooksEntrypoint.sh  convertido_01_download_car.py  docker-compose.yaml  docker_entrypoint.sh  run_notebooks.py
notebooks_md/: 03_Declividade.md  04_CorrecaoEdafo.md  08_FaixaFronteira.md  11_AdequarParaBancoDados.md
notebooks_py/: 01_Download_CAR_estados.py  Dockerfile  README.md
scripts/: build-executables.sh
(+14 files in other folders)
