[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lair-postgis"
version = "0.1.0"
description = "CLI tool to scaffold a PostGIS project structure."
authors = ["Seu Nome <seu.email@exemplo.com>"]
readme = "README.md"
homepage = "https://github.com/seu-usuario/lair-postgis"
repository = "https://github.com/seu-usuario/lair-postgis"
keywords = ["cli", "postgis", "docker", "scaffold"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [{ include = "lair_postgis", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
# Development dependencies
ruff = "*"
mkdocs = "*"
mkdocs-material = "*"
pyright = "*"
codespell = "*"
commitizen = "*"

[tool.poetry.scripts]
lair-postgis = "lair_postgis.cli:main"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"