[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["integracao_tematica"]

[project]
name = "integracao-tematica"
version = "0.1.0"
description = "Scripts para integração temática geoespacial"
requires-python = ">=3.8"
readme = "README.md"
authors = [
    {name = "Embrapa", email = "exemplo@embrapa.br"}
]
dependencies = [
    "numpy",
    "pandas",
    "geopandas",
    "rasterio",
    "shapely",
    "gdal",
    "pyproj",
    "requests",
    "matplotlib",
    "tesseract-ocr",
    "pytesseract"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]